--- a/ui/templates/plugins_en.html
+++ b/ui/templates/plugins_en.html
@@ -121,7 +121,7 @@
                         <td>Carb</td>
                         <td><a href="https://github.com/wjgilmore" target="_blank">wjgilmore</a></td>
                         <td>A PHP command line tool for the automated generation of a new F3 project structure.</td>
-                        <td><a class="btn btn-info" href="https://github.com/killsaw/F3-Plugins/blob/master/axonrest.php" target="_blank">view</a></td>
+                        <td><a class="btn btn-info" href="https://github.com/wjgilmore/Carb" target="_blank">view</a></td>
                     </tr>
                 </tbody>
             </table>
