--- a/css/main.css
+++ b/css/main.css
@@ -18,6 +18,10 @@ td.center {
 	text-align: center;
 }
 
+.form-search {
+	margin: 0;
+	padding-top: 5px;
+}
 
 /* app styles */
 
@@ -64,8 +68,17 @@ td.center {
     margin-bottom: 20px;
 }
 
-	.package div {
+	.package > div {
 	    margin-bottom: 10px;
+	    padding: 10px;
+	    background: #efefef;
+	    border-radius: 5px;
+	}
+	.package > div.internal {
+		background: #fafafa;		
+	}
+	.package > div.internal .alert {
+		margin-bottom: 0;
 	}
 	.package div.hidden {
 		padding-top: 10px;
