--- a/css/main.css
+++ b/css/main.css
@@ -103,22 +103,22 @@ td.center {
 			float: left;
 		}
 		
-	ol.linenums li {
-		color: #BEBEC5 !important;
-		line-height: 18px;
-		text-shadow: 0 1px 0 #FFFFFF;
-		list-style:decimal;
-	}	
-	.prettyprint.linenums {
-    box-shadow: 40px 0 0 #FBFBFC inset, 41px 0 0 #ECECF0 inset;
+		
+/* code prettify */
+
+.prettyprint.linenums {
+	box-shadow: 40px 0 0 #FBFBFC inset, 41px 0 0 #ECECF0 inset;
+}
+	ol.linenums {
+		margin-left: 40px;
 	}
-	prettify.css (Zeile 15)
-	pre.prettyprint {
-		margin-bottom: 18px;
-	}
-	bootstrap.css (Zeile 560)
-	.prettyprint {
-		background-color: #F7F7F9;
-		border: 1px solid #E1E1E8;
-		padding: 8px;
-	}
+		ol.linenums li {
+			color: #BEBEC5 !important;
+			line-height: 18px;
+			text-shadow: 0 1px 0 #FFFFFF;
+			list-style:decimal;
+		}
+
+pre.prettyprint {
+	margin-bottom: 18px;
+}
