Make display of the search field contingent on results being possible.

--- a/css/main.css
+++ b/css/main.css
@@ -104,6 +104,9 @@ td.center {
 		}
 
 
+/* wait for Javascript to show the search field */
+#search-query { display: none; }
+
 /* code prettify */
 
 .prettyprint.linenums {
