Prettify the recommended filesystem hierarchy for projects.
Source: http://odyniec.net/articles/turning-lists-into-trees/

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -69,7 +69,13 @@
 <script src="js/bootstrap.min.js"></script>
 <script src="js/jquery.quicksearch.js"></script>
 <script src="js/main.js"></script>
-
+<!--[if lte IE 8]>
+<script type="text/javascript">
+    $(document).ready(function () {
+        $('ul.tree li:last-child').addClass('last');
+     });
+</script>
+<![endif]-->
 </body>
 </html>
 
