--- a/css/main.css
+++ b/css/main.css
@@ -112,3 +112,30 @@ td.center {
 div.highlight {
 	margin-bottom: 3ex;
 }
+
+/* filesystem hierarchy prettify */
+ul.tree, ul.tree ul {
+	list-style-type: none;
+	background: #f5f5f5 url(../img/vline.png) repeat-y 0.5ex 0;
+	margin: 0;
+	padding: 0 0 0 0.5ex;
+}
+ul.tree {
+	background-position: 1em 0;
+	padding-left: 1em;
+	border: 1px solid #ccc;
+	border: 1px solid rgba(0, 0, 0, 0.15);
+	-webkit-border-radius: 4px;
+	-moz-border-radius: 4px;
+	border-radius: 4px;
+}
+ul.tree li {
+	margin: 0 4px 0 0;
+	padding: 0 12px;
+	line-height: 20px;
+	background: url(../img/node.png) no-repeat;
+}
+ul.tree li:last-child, ul.tree li.last {
+	background: #f5f5f5 url(../img/lastnode.png) no-repeat;
+	padding-bottom: 0.5ex;
+}
