fixing fork me ribbon, adding favicon

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,15 +16,11 @@
     <![endif]-->
 
     <!-- fav and touch icons -->
-    <!--<link rel="shortcut icon" href="../assets/ico/favicon.ico">
-    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="../assets/ico/apple-touch-icon-114-precomposed.png">
-    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="../assets/ico/apple-touch-icon-72-precomposed.png">
-    <link rel="apple-touch-icon-precomposed" href="../assets/ico/apple-touch-icon-57-precomposed.png">-->
+    <link rel="shortcut icon" href="img/f3f_icon_32.ico">    
+    <link rel="apple-touch-icon" href=".img/f3f_icon_57.png">
 </head>
 
 <body>
-
-<a href="https://github.com/ikkez/FatFreeFridge"><img style="position: absolute; z-index: 1200; top: 0; right: 0; border: 0;" src="http://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub" /></a>
 
 <div class="navbar navbar-fixed-top">
     <div class="navbar-inner">
@@ -35,6 +31,7 @@
                 <span class="icon-bar"></span>
             </a>
             <a class="brand" href="#">Fat-Free Fridge</a>
+            <iframe class="pull-right" style="margin-top:10px;" src="http://markdotto.github.com/github-buttons/github-btn.html?user=ikkez&repo=fatfreefridge&type=fork&count=true" allowtransparency="true" frameborder="0" scrolling="0" width="95px" height="20px"></iframe>
             <div class="nav-collapse">
                 <ul class="nav">
                     {% for tab in site.navbar %}
