BugFix: GH-Buttons breaking the site

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,7 +31,8 @@
                 <span class="icon-bar"></span>
             </a>
             <a class="brand" href="#">Fat-Free Fridge</a>
-            <iframe class="pull-right" style="margin-top:10px;" src="http://markdotto.github.com/github-buttons/github-btn.html?user=ikkez&repo=fatfreefridge&type=fork&count=true" allowtransparency="true" frameborder="0" scrolling="0" width="95px" height="20px"></iframe>
+            <iframe class="pull-right" style="margin-top:10px;" src="http://ghbtns.com/github-btn.html?user=ikkez&repo=fatfreefridge&type=fork&count=true" allowtransparency="true" frameborder="0" scrolling="0" width="95px" height="20px"></iframe>
+            <iframe class="pull-right" style="margin-top:10px;" src="http://ghbtns.com/github-btn.html?user=ikkez&repo=fatfreefridge&type=watch&count=true" allowtransparency="true" frameborder="0" scrolling="0" width="95px" height="20px"></iframe>
             <div class="nav-collapse">
                 <ul class="nav">
                     {% for tab in site.navbar %}
